--- a/HTML_FSD/Table.html
+++ b/HTML_FSD/Table.html
@@ -8,7 +8,7 @@
 <body>
     <table style="width:100%" border="1">
     <h2 style="text-align: center;">Academic Classification</h2>
-  <tr>
+  <tr style = "background-color: bisque;">
     <th>Sr NO.</th>
     <th>Class</th>
     <th>Board/Univ</th>
